2008-04-08  Vincent Untz  <vuntz@gnome.org>

	Lots of cleanup, some leak plugging.

	* clock-country.[ch]: add some const to function declarations
	* clock-zonetable.[ch]: lots of minor changes all over the place.
	Basically:
	 - make the ClockZonetable object a singleton
	 - be a bit more solid when parsing files
	 - plug some leaks (don't forget to unref ClockCountry and
	   ClockZoneinfo, eg)
	 - clean up the code to be more readable
	 - add some const to function declarations
	* clock.c: (create_cities_store): small FIXME for later

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-zonetable.c: (clock_zonetable_new), (clock_zonetable_init),
	(clock_zonetable_finalize), (clock_zonetable_load_zonetab): remove all
	code using available_zones since it wasn't used. The initialization was
	done in a "#ifdef USE_CRIPPLED_ZONELIST" and it's not possible to
	trigger it. The code was used to only add timezones from a whitelist.

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	Use the right directory for timezone data on Solaris.
	Based on patch by Brian Cameron <brian.cameron@sun.com>
	Fix bug #515085.
	Also use the right evolution text domain for timezone translations.

	* Makefile.am: remove definition of SYSTEM_ZONEINFODIR, and update the
	evolution text domain
	* clock-zoneinfo.h: define SYSTEM_ZONEINFODIR
	* clock-zonetable.[ch]: (clock_zonetable_new): do not take an argument,
	and directly use the defined value for the directory
	* clock.c: (fill_clock_applet): updated

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: (clock_map_new), (clock_map_init): minor cleanup

2008-04-08  Vincent Untz  <vuntz@gnome.org>

	* clock-map.c: add enums for markers and an array for marker files
	(clock_map_new),: do not load the marker pixbuf here
	(clock_map_init): do it here, with a simple loop
	(clock_map_finalize):
	(clock_map_place_location): trivial updates to use the enum

2008-04-08  Vincent Untz  <vuntz@gnome.org>
